Completed document handling part