@@ -3,18 +3,15 @@ package com.emart.emart.services.product;
 import com.emart.emart.dtos.ProductDto;
 import com.emart.emart.mappers.ProductMapper;
 import com.emart.emart.models.Product;
+import com.emart.emart.models.ProductDocument;
+import com.emart.emart.repositories.ProductDocumentRepo;
 import com.emart.emart.repositories.ProductRepo;
-import com.emart.emart.repositories.ref.RefCategoryRepo;
+import com.emart.emart.repositories.reference.RefCategoryRepo;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
-import java.nio.file.*;
-import java.io.FileOutputStream;
-import java.io.IOException;
-import java.util.Base64;
 import java.util.List;
 import java.util.Objects;
 
@@ -22,27 +19,15 @@ import java.util.Objects;
 public class ProductServiceImpl implements ProductService {
     private final Logger logger = LoggerFactory.getLogger(ProductServiceImpl.class);
 
-    @Value("${baseUrl.fileLocation}")
-    private String baseFileLocation;
-
     @Autowired
     ProductRepo productRepo;
     @Autowired
     RefCategoryRepo refCategoryRepo;
+    @Autowired
+    ProductDocumentRepo productDocumentRepo;
 
     @Override
     public void saveProduct(Product product) {
-
-        // document uploading
-        if (!product.getDocumentPath().isEmpty()) {
-            // Saving the document
-            String documentFileName = "document_" + System.currentTimeMillis() + ".pdf";
-
-            // Change the base file location from yml file
-            String documentFilePath = baseFileLocation + "\\documents\\" + product.getProductCode() + "\\" + documentFileName;
-            saveBase64DocumentToFile(product.getDocumentPath(), documentFilePath);
-            product.setDocumentPath(documentFilePath);
-        }
 
 //        // product images uploading
 //        if (!product.getProductImagesPath().isEmpty()) {
@@ -55,21 +40,12 @@ public class ProductServiceImpl implements ProductService {
 //            product.setProductImagesPath(String.valueOf(Paths.get(imagePath).getParent()));
 //        }
 
-        else product.setDocumentPath("");
-
         product.setCategory(refCategoryRepo.findByRefCategoryId(Long.valueOf(product.getCategory())).getRefCategoryName());
         productRepo.save(product);
     }
 
     @Override
     public ProductDto viewProduct(Long productId) {
-        Product product = productRepo.findByProductIdAndDeletedIsFalse(productId);
-
-        // converting the file to base64 if exists
-        if (!product.getDocumentPath().isEmpty()) {
-            String base64Document = convertDocumentToBase64(product.getDocumentPath());
-            product.setDocumentPath(base64Document);
-        }
         logger.info("fetched product");
         return ProductMapper.productMapper.mapToProductDto(productRepo.findByProductIdAndDeletedIsFalse(productId));
     }
@@ -122,11 +98,9 @@ public class ProductServiceImpl implements ProductService {
             return 2;
         } else {
             Product product1 = productRepo.findByProductCodeAndDeletedIsFalse(product.getProductCode());
-            String currentDocumentPath = updatedProduct.getDocumentPath();
-
-            if (product1 == null || Objects.equals(product1.getProductId(), productId)) {
+            if (product1 == null || Objects.equals(product1.getProductId(), productId))
+            {
                 updatedProduct.setProductName(product.getProductName());
-//                updatedProduct.setProductCode(product.getProductCode());
                 updatedProduct.setDescription(product.getDescription());
                 updatedProduct.setQuantity(product.getQuantity());
                 updatedProduct.setRating(product.getRating());
@@ -135,14 +109,6 @@ public class ProductServiceImpl implements ProductService {
                 updatedProduct.setColor(product.getColor());
                 updatedProduct.setCategory(refCategoryRepo.findByRefCategoryId(Long.valueOf(product.getCategory())).getRefCategoryName());
                 productRepo.save(updatedProduct);
-
-                if (!currentDocumentPath.isEmpty()){
-                    // Deleting the existing document file
-                    deleteDocumentFile(currentDocumentPath);
-
-                    // Saving the new base64 document to file
-                    saveBase64DocumentToFile(product.getDocumentPath(), updatedProduct.getDocumentPath());
-                }
 
                 logger.info("product updated");
                 return 0;
@@ -161,10 +127,15 @@ public class ProductServiceImpl implements ProductService {
             return 1;
         }
         else {
-            // Deleting the existing document file if exists
-            if (!deletedProduct.getDocumentPath().isEmpty()) {
-                deleteDocumentFile(deletedProduct.getDocumentPath());
+            // Deleting existing documents if exists
+            List<ProductDocument> productDocumentList =  productDocumentRepo.findAllByProductAndDeletedIsFalse(deletedProduct);
+            if (productDocumentList != null){
+                for (ProductDocument productDocument : productDocumentList) {
+                    productDocument.setDeleted(true);
+                    productDocumentRepo.save(productDocument);
+                }
             }
+
             deletedProduct.setDeleted(true);
             productRepo.save(deletedProduct);
             logger.info("product deleted");
@@ -172,53 +143,20 @@ public class ProductServiceImpl implements ProductService {
         }
     }
 
-
-    // Helper method to save base64 document to file
-    @Override
-    public void saveBase64DocumentToFile(String base64Document, String filePath) {
-        try {
-            // Creating a file if not exists
-            Path directoryPath = Paths.get(filePath).getParent();
-            Files.createDirectories(directoryPath);
-
-            // Saving the base64 document to file
-            try (FileOutputStream fos = new FileOutputStream(filePath)) {
-                byte[] decodedBytes = Base64.getDecoder().decode(base64Document);
-                fos.write(decodedBytes);
-            }
-        } catch (IOException e) {
-            logger.error("Error while saving base64 document to file", e);
-            throw new RuntimeException("Error while saving base64 document to file", e);
-        }
-    }
-
-    // Helper method to convert document to base64
-    @Override
-    public String convertDocumentToBase64(String filePath) {
-        byte[] documentBytes;
-        try {
-            documentBytes = Files.readAllBytes(Path.of(filePath));
-        } catch (IOException e) {
-            logger.error("Error while converting document to base64", e);
-            throw new RuntimeException("Error while converting document to base64", e);
-        }
-        return Base64.getEncoder().encodeToString(documentBytes);
-    }
-
     // Helper method to delete document file
-    @Override
-    public void deleteDocumentFile(String filePath)
-    {
-        try {
-            // Delete the document file
-            Files.deleteIfExists(Path.of(filePath));
-
-            // Delete the parent folder
-            Files.deleteIfExists(Paths.get(filePath).getParent());
-        }
-        catch (IOException e) {
-            logger.error("Error while deleting document file", e);
-            throw new RuntimeException("Error while deleting document file", e);
-        }
-    }
+//    @Override
+//    public void deleteDocumentFile(String filePath)
+//    {
+//        try {
+//            // Delete the document file
+//            Files.deleteIfExists(Path.of(filePath));
+//
+//            // Delete the parent folder
+//            Files.deleteIfExists(Paths.get(filePath).getParent());
+//        }
+//        catch (IOException e) {
+//            logger.error("Error while deleting document file", e);
+//            throw new RuntimeException("Error while deleting document file", e);
+//        }
+//    }
 }
